nix/parser/machine.go

//line machine.rl:1
// compile-command: "ragel -Z -G2 machine.rl"

package parser

import "fmt"

const maxstack = 64


//line machine.rl:101



//line machine.go:14
const expr_start int = 22
const expr_first_final int = 22
const expr_error int = 0

const expr_en_qstring int = 79
const expr_en_istring int = 82
const expr_en_expr int = 22


//line machine.rl:104

func lexData(data []byte, r *lexResult) (err error) {
	var cs, act, ts, te, top int
	var stack [maxstack]int
	p, pe := 0, len(data)
	eof := pe

//line machine.go:30
	{
	cs = expr_start
	top = 0
	ts = 0
	te = 0
	act = 0
	}

//line machine.rl:111
	_, _, _, _, _ = expr_first_final, expr_error, expr_en_qstring, expr_en_istring, expr_en_expr
	if r.file == nil {
		r.file = fileset.AddFile("(string)", -1, len(data))
	}
	if r.data == nil {
		r.data = data
	} else {
		r.data = append(r.data, data...)
	}
	nostack := func() bool {
		if top != maxstack {
			return false
		}
		err = r.Errorf("exceeds recursion limit")
		return true
	}
	tok := func(sym int) { r.tokens = append(r.tokens, lexerToken{sym: sym, pos: ts, end: te}) }
	tokcomment := func(sym int) { r.comments = append(r.comments, lexerToken{sym: sym, pos: ts, end: te}) }
	var backrefs Backrefs
	tokenter := func(sym, fin int) { backrefs.Push(len(r.tokens), fin); tok(sym); }
	tokleave := func(sym int) bool {
		tok(sym)
		if top == 0 || len(backrefs) == 0 {
			err = r.Errorf("does not close anything")
			return false
		}
		iprev, prevsym := backrefs.Pop()
		if prevsym != sym {
			err = r.Errorf("does not close %v", r.tokens[iprev])
			return false
		}
		r.tokens[len(r.tokens)-1].prev = iprev
		return true
	}
	tokarg := func() bool {
		tok(int(data[ts]))
		if len(r.tokens) == 1 {
			err = r.Errorf("does not follow anything")
			return false
		}
		prev := &r.tokens[len(r.tokens)-2]
		switch prev.sym {
		case id:
			prev.sym = argID
		case '}':
			r.tokens[prev.prev].sym = argBracket
		default:
			err = r.Errorf("does not follow an argument of a function")
			return false
		}
		return true
	}
	addLines := func() {
		for i := ts; i < te; i++ {
			if data[i] == '\n' {
				r.file.AddLine(i)
			}
		}
	}


//line machine.go:99
	{
	if p == pe {
		goto _test_eof
	}
	goto _resume

_again:
	switch cs {
	case 22:
		goto st22
	case 23:
		goto st23
	case 1:
		goto st1
	case 24:
		goto st24
	case 2:
		goto st2
	case 3:
		goto st3
	case 25:
		goto st25
	case 26:
		goto st26
	case 27:
		goto st27
	case 28:
		goto st28
	case 29:
		goto st29
	case 30:
		goto st30
	case 31:
		goto st31
	case 32:
		goto st32
	case 33:
		goto st33
	case 4:
		goto st4
	case 5:
		goto st5
	case 34:
		goto st34
	case 35:
		goto st35
	case 36:
		goto st36
	case 37:
		goto st37
	case 6:
		goto st6
	case 38:
		goto st38
	case 7:
		goto st7
	case 8:
		goto st8
	case 39:
		goto st39
	case 40:
		goto st40
	case 9:
		goto st9
	case 10:
		goto st10
	case 41:
		goto st41
	case 42:
		goto st42
	case 43:
		goto st43
	case 44:
		goto st44
	case 45:
		goto st45
	case 11:
		goto st11
	case 12:
		goto st12
	case 46:
		goto st46
	case 47:
		goto st47
	case 48:
		goto st48
	case 13:
		goto st13
	case 14:
		goto st14
	case 49:
		goto st49
	case 50:
		goto st50
	case 51:
		goto st51
	case 52:
		goto st52
	case 53:
		goto st53
	case 54:
		goto st54
	case 55:
		goto st55
	case 56:
		goto st56
	case 57:
		goto st57
	case 58:
		goto st58
	case 59:
		goto st59
	case 60:
		goto st60
	case 61:
		goto st61
	case 62:
		goto st62
	case 63:
		goto st63
	case 64:
		goto st64
	case 65:
		goto st65
	case 66:
		goto st66
	case 67:
		goto st67
	case 68:
		goto st68
	case 69:
		goto st69
	case 70:
		goto st70
	case 71:
		goto st71
	case 72:
		goto st72
	case 73:
		goto st73
	case 74:
		goto st74
	case 75:
		goto st75
	case 76:
		goto st76
	case 15:
		goto st15
	case 77:
		goto st77
	case 78:
		goto st78
	case 79:
		goto st79
	case 80:
		goto st80
	case 16:
		goto st16
	case 17:
		goto st17
	case 81:
		goto st81
	case 82:
		goto st82
	case 83:
		goto st83
	case 18:
		goto st18
	case 19:
		goto st19
	case 20:
		goto st20
	case 21:
		goto st21
	case 84:
		goto st84
	case 85:
		goto st85
	case 86:
		goto st86
	case 0:
		goto st0
	}

	if p++; p == pe {
		goto _test_eof
	}
_resume:
	switch cs {
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 1:
		goto st_case_1
	case 24:
		goto st_case_24
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 6:
		goto st_case_6
	case 38:
		goto st_case_38
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 15:
		goto st_case_15
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 0:
		goto st_case_0
	}
	goto st_out
tr0:
//line machine.rl:97
p = (te) - 1
{ tok(int(data[ts])) }
	goto st22
tr2:
//line machine.rl:69
p = (te) - 1
{ tok(float) }
	goto st22
tr5:
//line NONE:1
	switch act {
	case 9:
	{p = (te) - 1
 tok(assert_) }
	case 10:
	{p = (te) - 1
 tok(else_) }
	case 11:
	{p = (te) - 1
 tok(if_) }
	case 12:
	{p = (te) - 1
 tok(in) }
	case 13:
	{p = (te) - 1
 tok(inherit) }
	case 14:
	{p = (te) - 1
 tok(let) }
	case 15:
	{p = (te) - 1
 tok(or_) }
	case 16:
	{p = (te) - 1
 tok(rec) }
	case 17:
	{p = (te) - 1
 tok(then) }
	case 18:
	{p = (te) - 1
 tok(with) }
	case 27:
	{p = (te) - 1
 tok(float) }
	case 28:
	{p = (te) - 1
 tok(int_) }
	case 29:
	{p = (te) - 1
 tok(id) }
	case 30:
	{p = (te) - 1
 tok(ellipsis) }
	case 39:
	{p = (te) - 1
 tok(concat) }
	case 50:
	{p = (te) - 1
 tok(int(data[ts])) }
	}
	
	goto st22
tr14:
//line machine.rl:64
te = p+1
{ tokcomment(comment); addLines() }
	goto st22
tr17:
//line machine.rl:68
te = p+1
{ tok(path) }
	goto st22
tr31:
//line machine.rl:97
te = p+1
{ tok(int(data[ts])) }
	goto st22
tr33:
//line machine.rl:62
te = p+1
{ r.file.AddLine(ts) }
	goto st22
tr35:
//line machine.rl:86
te = p+1
{ tokenter('"', '"'); { if nostack() { return }; {stack[top] = 22; top++; goto st79 }} }
	goto st22
tr40:
//line machine.rl:90
te = p+1
{ tokenter('(', ')'); { if nostack() { return }; {stack[top] = 22; top++; goto st22 }} }
	goto st22
tr41:
//line machine.rl:93
te = p+1
{ if !tokleave(int(data[ts])) { return }; {top--; cs = stack[top];goto _again } }
	goto st22
tr48:
//line machine.rl:95
te = p+1
{ if !tokarg() { return }; }
	goto st22
tr53:
//line machine.rl:91
te = p+1
{ tokenter('[', ']'); { if nostack() { return }; {stack[top] = 22; top++; goto st22 }} }
	goto st22
tr63:
//line machine.rl:92
te = p+1
{ tokenter('{', '}'); { if nostack() { return }; {stack[top] = 22; top++; goto st22 }} }
	goto st22
tr66:
//line machine.rl:97
te = p
p--
{ tok(int(data[ts])) }
	goto st22
tr68:
//line machine.rl:69
te = p
p--
{ tok(float) }
	goto st22
tr70:
//line machine.rl:61
te = p
p--

	goto st22
tr71:
//line machine.rl:78
te = p+1
{ tok(neq) }
	goto st22
tr72:
//line machine.rl:63
te = p
p--
{ tokcomment(comment) }
	goto st22
tr73:
//line machine.rl:89
te = p+1
{ tokenter(interp, '}'); { if nostack() { return }; {stack[top] = 22; top++; goto st22 }} }
	goto st22
tr74:
//line machine.rl:76
te = p+1
{ tok(and) }
	goto st22
tr75:
//line machine.rl:87
te = p+1
{ tokenter(ii, ii); { if nostack() { return }; {stack[top] = 22; top++; goto st82 }}  }
	goto st22
tr77:
//line machine.rl:66
te = p
p--
{ tok(path) }
	goto st22
tr79:
//line machine.rl:74
te = p+1
{ tok(impl) }
	goto st22
tr83:
//line machine.rl:81
te = p+1
{ tok(update) }
	goto st22
tr84:
//line machine.rl:70
te = p
p--
{ tok(int_) }
	goto st22
tr86:
//line machine.rl:71
te = p
p--
{ tok(id) }
	goto st22
tr87:
//line machine.rl:79
te = p+1
{ tok(leq) }
	goto st22
tr88:
//line machine.rl:84
te = p+1
{ tok(pipe_from) }
	goto st22
tr89:
//line machine.rl:77
te = p+1
{ tok(eq) }
	goto st22
tr90:
//line machine.rl:80
te = p+1
{ tok(geq) }
	goto st22
tr91:
//line machine.rl:65
te = p
p--
{ tok(uri) }
	goto st22
tr102:
//line machine.rl:53
te = p
p--
{ tok(in) }
	goto st22
tr119:
//line machine.rl:83
te = p+1
{ tok(pipe_into) }
	goto st22
tr120:
//line machine.rl:75
te = p+1
{ tok(or) }
	goto st22
tr122:
//line machine.rl:67
te = p
p--
{ tok(path) }
	goto st22
	st22:
//line NONE:1
ts = 0

		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
//line NONE:1
ts = p

//line machine.go:710
		switch data[p] {
		case 0:
			goto tr30
		case 9:
			goto st26
		case 10:
			goto tr33
		case 13:
			goto st26
		case 32:
			goto st26
		case 33:
			goto st27
		case 34:
			goto tr35
		case 35:
			goto st28
		case 36:
			goto st29
		case 38:
			goto st30
		case 39:
			goto st31
		case 40:
			goto tr40
		case 41:
			goto tr41
		case 43:
			goto tr42
		case 45:
			goto tr43
		case 46:
			goto tr44
		case 47:
			goto tr45
		case 48:
			goto tr46
		case 58:
			goto tr48
		case 60:
			goto tr49
		case 61:
			goto st46
		case 62:
			goto st47
		case 64:
			goto tr48
		case 91:
			goto tr53
		case 93:
			goto tr41
		case 95:
			goto tr54
		case 97:
			goto tr55
		case 101:
			goto tr56
		case 105:
			goto tr57
		case 108:
			goto tr58
		case 111:
			goto tr59
		case 114:
			goto tr60
		case 116:
			goto tr61
		case 119:
			goto tr62
		case 123:
			goto tr63
		case 124:
			goto st75
		case 125:
			goto tr41
		case 126:
			goto tr65
		}
		switch {
		case data[p] < 65:
			if 49 <= data[p] && data[p] <= 57 {
				goto tr47
			}
		case data[p] > 90:
			if 98 <= data[p] && data[p] <= 122 {
				goto tr52
			}
		default:
			goto tr52
		}
		goto tr31
tr30:
//line NONE:1
te = p+1

	goto st23
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
//line machine.go:812
		if data[p] == 46 {
			goto st1
		}
		goto tr66
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto tr0
tr1:
//line NONE:1
te = p+1

	goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
//line machine.go:836
		switch data[p] {
		case 69:
			goto st2
		case 101:
			goto st2
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto tr68
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 43:
			goto st3
		case 45:
			goto st3
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st25
		}
		goto tr2
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		if 48 <= data[p] && data[p] <= 57 {
			goto st25
		}
		goto tr2
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if 48 <= data[p] && data[p] <= 57 {
			goto st25
		}
		goto tr68
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 9:
			goto st26
		case 13:
			goto st26
		case 32:
			goto st26
		}
		goto tr70
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		if data[p] == 61 {
			goto tr71
		}
		goto tr66
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 10:
			goto tr72
		case 13:
			goto tr72
		}
		goto st28
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		if data[p] == 123 {
			goto tr73
		}
		goto tr66
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		if data[p] == 38 {
			goto tr74
		}
		goto tr66
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		if data[p] == 39 {
			goto tr75
		}
		goto tr66
tr42:
//line NONE:1
te = p+1

//line machine.rl:97
act = 50;
	goto st32
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
//line machine.go:954
		switch data[p] {
		case 43:
			goto tr76
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st4
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr66
tr9:
//line NONE:1
te = p+1

//line machine.rl:73
act = 30;
	goto st33
tr76:
//line NONE:1
te = p+1

//line machine.rl:82
act = 39;
	goto st33
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
//line machine.go:995
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st4
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr5
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st4
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 43:
			goto st34
		case 95:
			goto st34
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st34
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st34
				}
			case data[p] >= 65:
				goto st34
			}
		default:
			goto st34
		}
		goto tr5
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		switch data[p] {
		case 43:
			goto st34
		case 47:
			goto st35
		case 95:
			goto st34
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st34
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st34
			}
		default:
			goto st34
		}
		goto tr77
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		switch data[p] {
		case 43:
			goto st34
		case 95:
			goto st34
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st34
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st34
				}
			case data[p] >= 65:
				goto st34
			}
		default:
			goto st34
		}
		goto tr77
tr43:
//line NONE:1
te = p+1

//line machine.rl:97
act = 50;
	goto st36
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
//line machine.go:1139
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 62:
			goto tr79
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st4
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr66
tr44:
//line NONE:1
te = p+1

//line machine.rl:97
act = 50;
	goto st37
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
//line machine.go:1175
		switch data[p] {
		case 43:
			goto st4
		case 45:
			goto st4
		case 46:
			goto st6
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr81
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr66
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 43:
			goto st4
		case 46:
			goto tr9
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st4
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr0
tr81:
//line NONE:1
te = p+1

//line machine.rl:69
act = 27;
	goto st38
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
//line machine.go:1241
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 69:
			goto st7
		case 95:
			goto st4
		case 101:
			goto st7
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st4
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st4
				}
			case data[p] >= 65:
				goto st4
			}
		default:
			goto tr81
		}
		goto tr68
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 43:
			goto st8
		case 45:
			goto st8
		case 46:
			goto st4
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr11
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st4
			}
		default:
			goto st4
		}
		goto tr2
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st4
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st4
				}
			case data[p] >= 65:
				goto st4
			}
		default:
			goto tr11
		}
		goto tr2
tr11:
//line NONE:1
te = p+1

//line machine.rl:69
act = 27;
	goto st39
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
//line machine.go:1345
		switch data[p] {
		case 43:
			goto st4
		case 47:
			goto st5
		case 95:
			goto st4
		}
		switch {
		case data[p] < 48:
			if 45 <= data[p] && data[p] <= 46 {
				goto st4
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto st4
				}
			case data[p] >= 65:
				goto st4
			}
		default:
			goto tr11
		}
		goto tr68
tr45:
//line NONE:1
te = p+1

	goto st40
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
//line machine.go:1382
		switch data[p] {
		case 42:
			goto st9
		case 43:
			goto st34
		case 47:
			goto tr83
		case 95:
			goto st34
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto st34
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st34
			}
		default:
			goto st34
		}
		goto tr66
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		if data[p] == 42 {
			goto st10
		}
		goto st9
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 42:
			goto st10
		case 47:
			goto tr14
		}
		goto st9
tr46:
//line NONE:1
te = p+1

//line machine.rl:70
act = 28;
	goto st41
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
//line machine.go:1439
		switch data[p] {
		case 39:
			goto st42
		case 43:
			goto st4
		case 45:
			goto tr54
		case 46:
			goto st4
		case 47:
			goto st5
		case 95:
			goto tr54
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr46
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr54
			}
		default:
			goto tr54
		}
		goto tr84
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		switch data[p] {
		case 39:
			goto st42
		case 45:
			goto st42
		case 95:
			goto st42
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st42
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st42
			}
		default:
			goto st42
		}
		goto tr86
tr54:
//line NONE:1
te = p+1

//line machine.rl:71
act = 29;
	goto st43
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
//line machine.go:1505
		switch data[p] {
		case 39:
			goto st42
		case 43:
			goto st4
		case 46:
			goto st4
		case 47:
			goto st5
		case 95:
			goto tr54
		}
		switch {
		case data[p] < 65:
			if 45 <= data[p] && data[p] <= 57 {
				goto tr54
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr54
			}
		default:
			goto tr54
		}
		goto tr86
tr47:
//line NONE:1
te = p+1

//line machine.rl:70
act = 28;
	goto st44
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
//line machine.go:1543
		switch data[p] {
		case 39:
			goto st42
		case 43:
			goto st4
		case 45:
			goto tr54
		case 46:
			goto tr81
		case 47:
			goto st5
		case 95:
			goto tr54
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr47
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr54
			}
		default:
			goto tr54
		}
		goto tr84
tr49:
//line NONE:1
te = p+1
